--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3825,6 +3825,9 @@ details.collapse summary::-webkit-details-marker {
 .mt-10 {
   margin-top: 2.5rem;
 }
+.mt-11 {
+  margin-top: 2.75rem;
+}
 .mt-16 {
   margin-top: 4rem;
 }
@@ -3923,6 +3926,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .h-\[210px\] {
   height: 210px;
+}
+.h-\[295px\] {
+  height: 295px;
 }
 .h-\[3px\] {
   height: 3px;
@@ -4029,6 +4035,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-\[316px\] {
   width: 316px;
+}
+.w-\[324px\] {
+  width: 324px;
 }
 .w-\[330px\] {
   width: 330px;
@@ -4151,6 +4160,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .max-w-\[640px\] {
   max-width: 640px;
+}
+.max-w-\[695px\] {
+  max-width: 695px;
 }
 .max-w-\[80px\] {
   max-width: 80px;
@@ -4663,6 +4675,10 @@ details.collapse summary::-webkit-details-marker {
   padding-left: 0px;
   padding-right: 0px;
 }
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
@@ -4746,6 +4762,10 @@ details.collapse summary::-webkit-details-marker {
 .py-6 {
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+.py-\[33px\] {
+  padding-top: 33px;
+  padding-bottom: 33px;
 }
 .pb-1 {
   padding-bottom: 0.25rem;
@@ -5458,6 +5478,10 @@ details.collapse summary::-webkit-details-marker {
   padding-left: 1.25rem;
 }
 
+.first\:pt-0:first-child {
+  padding-top: 0px;
+}
+
 .last\:mr-4:last-child {
   margin-right: 1rem;
 }
@@ -6041,6 +6065,11 @@ details.collapse summary::-webkit-details-marker {
 
 @media (min-width: 1024px) {
 
+  .lg\:mx-0 {
+    margin-left: 0px;
+    margin-right: 0px;
+  }
+
   .lg\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -6072,6 +6101,18 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:w-1\/3 {
     width: 33.333333%;
+  }
+
+  .lg\:w-\[1440px\] {
+    width: 1440px;
+  }
+
+  .lg\:w-\[450px\] {
+    width: 450px;
+  }
+
+  .lg\:w-\[495px\] {
+    width: 495px;
   }
 
   .lg\:w-\[70\%\] {
@@ -6226,6 +6267,18 @@ details.collapse summary::-webkit-details-marker {
   .xl\:mx-auto {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .xl\:h-\[495px\] {
+    height: 495px;
+  }
+
+  .xl\:w-\[581px\] {
+    width: 581px;
+  }
+
+  .xl\:w-\[695px\] {
+    width: 695px;
   }
 }
 
