--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -4063,6 +4063,9 @@ details.collapse summary::-webkit-details-marker {
 .w-\[80vw\] {
   width: 80vw;
 }
+.w-\[90\%\] {
+  width: 90%;
+}
 .w-auto {
   width: auto;
 }
@@ -4730,6 +4733,10 @@ details.collapse summary::-webkit-details-marker {
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
+}
+.py-12 {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 .py-16 {
   padding-top: 4rem;
@@ -5949,6 +5956,10 @@ details.collapse summary::-webkit-details-marker {
     display: block;
   }
 
+  .md\:w-1\/4 {
+    width: 25%;
+  }
+
   .md\:max-w-\[1440px\] {
     max-width: 1440px;
   }
@@ -6007,6 +6018,11 @@ details.collapse summary::-webkit-details-marker {
   .md\:px-6 {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  .md\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 
   .md\:px-\[60px\] {
