--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 /*
 ! tailwindcss v3.4.1 | MIT License | https://tailwindcss.com
 *//*
@@ -3230,6 +3228,48 @@ details.collapse summary::-webkit-details-marker {
   --togglehandleborder: 0 0 0 3px var(--fallback-bc,oklch(var(--bc)/1)) inset,
       var(--handleoffsetcalculator) 0 0 3px var(--fallback-bc,oklch(var(--bc)/1)) inset;
 }
+.glass,
+  .glass.btn-active {
+  border: none;
+  -webkit-backdrop-filter: blur(var(--glass-blur, 40px));
+          backdrop-filter: blur(var(--glass-blur, 40px));
+  background-color: transparent;
+  background-image: linear-gradient(
+        135deg,
+        rgb(255 255 255 / var(--glass-opacity, 30%)) 0%,
+        rgb(0 0 0 / 0%) 100%
+      ),
+      linear-gradient(
+        var(--glass-reflex-degree, 100deg),
+        rgb(255 255 255 / var(--glass-reflex-opacity, 10%)) 25%,
+        rgb(0 0 0 / 0%) 25%
+      );
+  box-shadow: 0 0 0 1px rgb(255 255 255 / var(--glass-border-opacity, 10%)) inset,
+      0 0 0 2px rgb(0 0 0 / 5%);
+  text-shadow: 0 1px rgb(0 0 0 / var(--glass-text-shadow-opacity, 5%));
+}
+@media (hover: hover) {
+
+  .glass.btn-active {
+    border: none;
+    -webkit-backdrop-filter: blur(var(--glass-blur, 40px));
+            backdrop-filter: blur(var(--glass-blur, 40px));
+    background-color: transparent;
+    background-image: linear-gradient(
+          135deg,
+          rgb(255 255 255 / var(--glass-opacity, 30%)) 0%,
+          rgb(0 0 0 / 0%) 100%
+        ),
+        linear-gradient(
+          var(--glass-reflex-degree, 100deg),
+          rgb(255 255 255 / var(--glass-reflex-opacity, 10%)) 25%,
+          rgb(0 0 0 / 0%) 25%
+        );
+    box-shadow: 0 0 0 1px rgb(255 255 255 / var(--glass-border-opacity, 10%)) inset,
+        0 0 0 2px rgb(0 0 0 / 5%);
+    text-shadow: 0 1px rgb(0 0 0 / var(--glass-text-shadow-opacity, 5%));
+  }
+}
 .no-animation {
   --btn-focus-scale: 1;
   --animation-btn: 0;
@@ -3770,11 +3810,17 @@ details.collapse summary::-webkit-details-marker {
 .ml-2 {
   margin-left: 0.5rem;
 }
+.ml-6 {
+  margin-left: 1.5rem;
+}
 .mr-2 {
   margin-right: 0.5rem;
 }
 .mr-3 {
   margin-right: 0.75rem;
+}
+.mr-7 {
+  margin-right: 1.75rem;
 }
 .mt-10 {
   margin-top: 2.5rem;
@@ -3833,6 +3879,12 @@ details.collapse summary::-webkit-details-marker {
 .aspect-\[156\/87\] {
   aspect-ratio: 156/87;
 }
+.h-0 {
+  height: 0px;
+}
+.h-0\.5 {
+  height: 0.125rem;
+}
 .h-12 {
   height: 3rem;
 }
@@ -3860,14 +3912,26 @@ details.collapse summary::-webkit-details-marker {
 .h-\[174px\] {
   height: 174px;
 }
+.h-\[200px\] {
+  height: 200px;
+}
 .h-\[210px\] {
   height: 210px;
 }
 .h-\[3px\] {
   height: 3px;
 }
+.h-\[50px\] {
+  height: 50px;
+}
 .h-\[52px\] {
   height: 52px;
+}
+.h-\[88px\] {
+  height: 88px;
+}
+.h-auto {
+  height: auto;
 }
 .h-full {
   height: 100%;
@@ -3912,6 +3976,9 @@ details.collapse summary::-webkit-details-marker {
 .min-h-\[42px\] {
   min-height: 42px;
 }
+.min-h-\[535px\] {
+  min-height: 535px;
+}
 .min-h-\[660px\] {
   min-height: 660px;
 }
@@ -3948,6 +4015,9 @@ details.collapse summary::-webkit-details-marker {
 .w-\[10px\] {
   width: 10px;
 }
+.w-\[200px\] {
+  width: 200px;
+}
 .w-\[287px\] {
   width: 287px;
 }
@@ -3969,8 +4039,14 @@ details.collapse summary::-webkit-details-marker {
 .w-\[4px\] {
   width: 4px;
 }
+.w-\[50px\] {
+  width: 50px;
+}
 .w-\[522px\] {
   width: 522px;
+}
+.w-\[94px\] {
+  width: 94px;
 }
 .w-auto {
   width: auto;
@@ -4028,6 +4104,9 @@ details.collapse summary::-webkit-details-marker {
 .max-w-\[139px\] {
   max-width: 139px;
 }
+.max-w-\[1440px\] {
+  max-width: 1440px;
+}
 .max-w-\[200px\] {
   max-width: 200px;
 }
@@ -4081,6 +4160,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .flex-auto {
   flex: 1 1 auto;
+}
+.flex-none {
+  flex: none;
 }
 .flex-shrink {
   flex-shrink: 1;
@@ -4170,6 +4252,9 @@ details.collapse summary::-webkit-details-marker {
 .grid-rows-\[1fr_32px_1fr_64px\] {
   grid-template-rows: 1fr 32px 1fr 64px;
 }
+.grid-rows-\[1fr_48px_1fr_64px\] {
+  grid-template-rows: 1fr 48px 1fr 64px;
+}
 .grid-rows-\[auto_1fr\] {
   grid-template-rows: auto 1fr;
 }
@@ -4253,6 +4338,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .gap-\[6px\] {
   gap: 6px;
+}
+.gap-y-4 {
+  row-gap: 1rem;
 }
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
@@ -4345,9 +4433,6 @@ details.collapse summary::-webkit-details-marker {
 .rounded-md {
   border-radius: 0.375rem;
 }
-.rounded-sm {
-  border-radius: 0.125rem;
-}
 .rounded-l {
   border-top-left-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -4422,6 +4507,10 @@ details.collapse summary::-webkit-details-marker {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
+.border-neutral {
+  --tw-border-opacity: 1;
+  border-color: var(--fallback-n,oklch(var(--n)/var(--tw-border-opacity)));
+}
 .border-transparent {
   border-color: transparent;
 }
@@ -4472,6 +4561,10 @@ details.collapse summary::-webkit-details-marker {
   --tw-bg-opacity: 1;
   background-color: var(--fallback-s,oklch(var(--s)/var(--tw-bg-opacity)));
 }
+.bg-secondary-content {
+  --tw-bg-opacity: 1;
+  background-color: var(--fallback-sc,oklch(var(--sc)/var(--tw-bg-opacity)));
+}
 .bg-slate-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(241 245 249 / var(--tw-bg-opacity));
@@ -4490,6 +4583,23 @@ details.collapse summary::-webkit-details-marker {
 }
 .bg-opacity-15 {
   --tw-bg-opacity: 0.15;
+}
+.bg-gradient-to-r {
+  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+.from-white {
+  --tw-gradient-from: #fff var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+.from-\[length\:var\(--dot-progress\)\] {
+  --tw-gradient-from-position: var(--dot-progress);
+}
+.to-\[\#f2f2f2\]\/\[\.5\] {
+  --tw-gradient-to: rgb(242 242 242 / .5) var(--tw-gradient-to-position);
+}
+.to-\[length\:var\(--dot-progress\)\] {
+  --tw-gradient-to-position: var(--dot-progress);
 }
 .bg-cover {
   background-size: cover;
@@ -4544,6 +4654,10 @@ details.collapse summary::-webkit-details-marker {
   padding-left: 0px;
   padding-right: 0px;
 }
+.px-10 {
+  padding-left: 2.5rem;
+  padding-right: 2.5rem;
+}
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -4571,6 +4685,10 @@ details.collapse summary::-webkit-details-marker {
 .px-\[12px\] {
   padding-left: 12px;
   padding-right: 12px;
+}
+.px-\[67px\] {
+  padding-left: 67px;
+  padding-right: 67px;
 }
 .py-0 {
   padding-top: 0px;
@@ -4625,11 +4743,20 @@ details.collapse summary::-webkit-details-marker {
 .pb-2 {
   padding-bottom: 0.5rem;
 }
+.pb-3 {
+  padding-bottom: 0.75rem;
+}
 .pb-4 {
   padding-bottom: 1rem;
 }
 .pb-\[15px\] {
   padding-bottom: 15px;
+}
+.pb-\[57px\] {
+  padding-bottom: 57px;
+}
+.pb-\[7px\] {
+  padding-bottom: 7px;
 }
 .pl-0 {
   padding-left: 0px;
@@ -4639,6 +4766,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .pl-3 {
   padding-left: 0.75rem;
+}
+.pl-\[9px\] {
+  padding-left: 9px;
 }
 .pr-2 {
   padding-right: 0.5rem;
@@ -4658,6 +4788,9 @@ details.collapse summary::-webkit-details-marker {
 .pt-20 {
   padding-top: 5rem;
 }
+.pt-3 {
+  padding-top: 0.75rem;
+}
 .pt-36 {
   padding-top: 9rem;
 }
@@ -4669,6 +4802,12 @@ details.collapse summary::-webkit-details-marker {
 }
 .pt-6 {
   padding-top: 1.5rem;
+}
+.pt-8 {
+  padding-top: 2rem;
+}
+.pt-\[5px\] {
+  padding-top: 5px;
 }
 .text-left {
   text-align: left;
@@ -4713,6 +4852,9 @@ details.collapse summary::-webkit-details-marker {
   font-size: 8rem;
   line-height: 1;
 }
+.text-\[10px\] {
+  font-size: 10px;
+}
 .text-\[12px\] {
   font-size: 12px;
 }
@@ -4736,6 +4878,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .text-\[48px\] {
   font-size: 48px;
+}
+.text-\[73px\] {
+  font-size: 73px;
 }
 .text-\[80px\] {
   font-size: 80px;
@@ -4769,6 +4914,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .font-bold {
   font-weight: 700;
+}
+.font-extralight {
+  font-weight: 200;
 }
 .font-light {
   font-weight: 300;
@@ -4881,6 +5029,10 @@ details.collapse summary::-webkit-details-marker {
 .text-gray-400 {
   --tw-text-opacity: 1;
   color: rgb(156 163 175 / var(--tw-text-opacity));
+}
+.text-neutral {
+  --tw-text-opacity: 1;
+  color: var(--fallback-n,oklch(var(--n)/var(--tw-text-opacity)));
 }
 .text-primary {
   --tw-text-opacity: 1;
@@ -5450,6 +5602,15 @@ details.collapse summary::-webkit-details-marker {
   display: none;
 }
 
+.group[data-painted] .group-data-\[painted\]\:bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.group[data-painted] .group-data-\[painted\]\:bg-none {
+  background-image: none;
+}
+
 @media (min-width: 640px) {
 
   .sm\:bottom-2 {
@@ -5519,6 +5680,10 @@ details.collapse summary::-webkit-details-marker {
     width: 50%;
   }
 
+  .sm\:w-24 {
+    width: 6rem;
+  }
+
   .sm\:w-\[300px\] {
     width: 300px;
   }
@@ -5529,6 +5694,10 @@ details.collapse summary::-webkit-details-marker {
 
   .sm\:w-\[552px\] {
     width: 552px;
+  }
+
+  .sm\:w-auto {
+    width: auto;
   }
 
   .sm\:max-w-96 {
@@ -5569,6 +5738,10 @@ details.collapse summary::-webkit-details-marker {
 
   .sm\:grid-cols-\[112px_1fr_112px\] {
     grid-template-columns: 112px 1fr 112px;
+  }
+
+  .sm\:grid-cols-\[120px_1fr_120px\] {
+    grid-template-columns: 120px 1fr 120px;
   }
 
   .sm\:grid-cols-\[150px_1fr\] {
@@ -5633,6 +5806,10 @@ details.collapse summary::-webkit-details-marker {
 
   .sm\:gap-6 {
     gap: 1.5rem;
+  }
+
+  .sm\:gap-\[10px\] {
+    gap: 10px;
   }
 
   .sm\:overflow-y-auto {
@@ -5708,6 +5885,14 @@ details.collapse summary::-webkit-details-marker {
     margin-right: 2.5rem;
   }
 
+  .md\:mr-0 {
+    margin-right: 0px;
+  }
+
+  .md\:max-w-\[1400px\] {
+    max-width: 1400px;
+  }
+
   .md\:max-w-\[50\%\] {
     max-width: 50%;
   }
@@ -5726,8 +5911,16 @@ details.collapse summary::-webkit-details-marker {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:justify-between {
+    justify-content: space-between;
+  }
+
   .md\:gap-20 {
     gap: 5rem;
+  }
+
+  .md\:overflow-hidden {
+    overflow: hidden;
   }
 
   .md\:px-\[60px\] {
@@ -5791,6 +5984,14 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-1\/3 {
+    width: 33.333333%;
+  }
+
+  .lg\:w-\[70\%\] {
+    width: 70%;
   }
 
   .lg\:w-full {
@@ -5935,4 +6136,3 @@ details.collapse summary::-webkit-details-marker {
 [data-aside].\[\[data-aside\]\&_section\]\:contents section {
   display: contents;
 }
->>>>>>> 8c46e30d9d4692375a12983bcfbc1a8768191616
