--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3915,14 +3915,14 @@ details.collapse summary::-webkit-details-marker {
 .h-8 {
   height: 2rem;
 }
+.h-\[100px\] {
+  height: 100px;
+}
 .h-\[10px\] {
   height: 10px;
 }
 .h-\[174px\] {
   height: 174px;
-}
-.h-\[200px\] {
-  height: 200px;
 }
 .h-\[210px\] {
   height: 210px;
@@ -3933,11 +3933,11 @@ details.collapse summary::-webkit-details-marker {
 .h-\[3px\] {
   height: 3px;
 }
-.h-\[50px\] {
-  height: 50px;
-}
 .h-\[52px\] {
   height: 52px;
+}
+.h-\[73px\] {
+  height: 73px;
 }
 .h-\[88px\] {
   height: 88px;
@@ -4030,6 +4030,9 @@ details.collapse summary::-webkit-details-marker {
 .w-\[200px\] {
   width: 200px;
 }
+.w-\[240px\] {
+  width: 240px;
+}
 .w-\[287px\] {
   width: 287px;
 }
@@ -4054,9 +4057,6 @@ details.collapse summary::-webkit-details-marker {
 .w-\[4px\] {
   width: 4px;
 }
-.w-\[50px\] {
-  width: 50px;
-}
 .w-\[522px\] {
   width: 522px;
 }
@@ -4065,6 +4065,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-\[90\%\] {
   width: 90%;
+}
+.w-\[90px\] {
+  width: 90px;
 }
 .w-auto {
   width: auto;
@@ -4190,9 +4193,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .flex-shrink {
   flex-shrink: 1;
-}
-.flex-shrink-0 {
-  flex-shrink: 0;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -4885,6 +4885,9 @@ details.collapse summary::-webkit-details-marker {
 .text-9xl {
   font-size: 8rem;
   line-height: 1;
+}
+.text-\[10px\] {
+  font-size: 10px;
 }
 .text-\[12px\] {
   font-size: 12px;
@@ -5947,10 +5950,6 @@ details.collapse summary::-webkit-details-marker {
     margin-right: 0px;
   }
 
-  .md\:mt-5 {
-    margin-top: 1.25rem;
-  }
-
   .md\:mt-8 {
     margin-top: 2rem;
   }
@@ -6106,8 +6105,8 @@ details.collapse summary::-webkit-details-marker {
     display: grid;
   }
 
-  .lg\:h-\[50px\] {
-    height: 50px;
+  .lg\:h-\[34px\] {
+    height: 34px;
   }
 
   .lg\:max-h-\[600px\] {
@@ -6124,10 +6123,6 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:w-\[1440px\] {
     width: 1440px;
-  }
-
-  .lg\:w-\[34px\] {
-    width: 34px;
   }
 
   .lg\:w-\[450px\] {
