--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -4186,14 +4186,14 @@ details.collapse summary::-webkit-details-marker {
 .w-\[596px\] {
   width: 596px;
 }
+.w-\[80\%\] {
+  width: 80%;
+}
 .w-\[800px\] {
   width: 800px;
 }
 .w-\[80vw\] {
   width: 80vw;
-}
-.w-\[90\%\] {
-  width: 90%;
 }
 .w-\[90px\] {
   width: 90px;
@@ -4337,6 +4337,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .flex-shrink {
   flex-shrink: 1;
+}
+.flex-shrink-0 {
+  flex-shrink: 0;
 }
 .shrink-0 {
   flex-shrink: 0;
@@ -6177,8 +6180,8 @@ details.collapse summary::-webkit-details-marker {
     display: block;
   }
 
-  .md\:w-1\/4 {
-    width: 25%;
+  .md\:w-1\/3 {
+    width: 33.333333%;
   }
 
   .md\:w-\[200px\] {
