--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -4189,9 +4189,6 @@ details.collapse summary::-webkit-details-marker {
 .w-\[80\%\] {
   width: 80%;
 }
-.w-\[800px\] {
-  width: 800px;
-}
 .w-\[80vw\] {
   width: 80vw;
 }
@@ -6187,6 +6184,10 @@ details.collapse summary::-webkit-details-marker {
     display: block;
   }
 
+  .md\:flex {
+    display: flex;
+  }
+
   .md\:w-1\/3 {
     width: 33.333333%;
   }
@@ -6376,6 +6377,10 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:w-\[70\%\] {
     width: 70%;
+  }
+
+  .lg\:w-\[800px\] {
+    width: 800px;
   }
 
   .lg\:w-\[94px\] {
